Use Collections#emptySet instead of Set#of
Signed-off-by: Ryan Emerson <remerson@redhat.com>